--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
    <!-- site metas -->
-   <title>cads</title>
+   <title>ENJOY ECUADOR TRAVEL</title>
    <meta name="keywords" content="">
    <meta name="description" content="">
    <meta name="author" content="">
@@ -49,7 +49,7 @@
                   <div class="full">
                      <div class="center-desk">
                         <div class="logo">
-                           <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                           <a href="index.html"><img src="" alt="" /></a>
                         </div>
                      </div>
                   </div>
@@ -58,18 +58,9 @@
                   <nav class="navigation navbar navbar-expand-md navbar-dark ">
                      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
                         aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+
                      </button>
-                     <div class="collapse navbar-collapse" id="navbarsExample04">
-                        <ul class="navbar-nav mr-auto">
-                           <li class="login_btn" class="nav-item" href="#">
-                              Login
-                           </li>
-                           <li class="nav-item">
-                              <a class="nav-link" href="#">Sing Up</a>
-                           </li>
-                        </ul>
-                     </div>
+
                   </nav>
                </div>
             </div>
@@ -84,17 +75,14 @@
          <div class="row d_flex">
             <div class="col-xl-6 col-lg-6 col-md-6 ">
                <div class="text-bg">
-                  <h1>Modern lighting</h1>
-                  <span>Free Multipurpose <br>
-                     Responsive Landing<br> Page For </span>
-                  <strong>Classified Ads</strong>
-                  <a href="#">Read More</a>
+                  <h1>ENJOY ECUADOR</h1>
+                  <h2>Travel</h2>
                </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 padding_lert2">
 
                <div class="text-img">
-                  <figure><img src="images/pc.png" alt="#" /></figure>
+                  <figure><img src="" alt="" /></figure>
                </div>
             </div>
          </div>
@@ -102,33 +90,7 @@
    </section>
    <!-- end banner -->
    <!-- about -->
-   <div class="about">
-      <div class="container">
-         <div class="row">
-            <div class="col-md-10 offset-md-1">
-               <div class="titlepage">
-                  <span>About our </span>
-                  <h2>Classified Ads</h2>
-                  <p>It is a long established fact that a reader will be distracted by the readable content of a page
-                     when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                     distribution of letters, as opposed to using 'Content here, content here', making it</p>
-               </div>
-            </div>
-         </div>
 
-         <div class="row">
-            <div class="ccol-md-10 offset-md-1">
-               <div class="about_box">
-                  <figure><img src="images/about.png" alt="#" /></figure>
-
-               </div>
-            </div>
-
-
-         </div>
-
-      </div>
-   </div>
 
    <!-- end about -->
    <!-- classified -->
@@ -137,10 +99,7 @@
          <div class="row">
             <div class="col-md-12">
                <div class="titlepage">
-                  <span>Why choose ads</span>
-                  <h2>ONE OF THE BEST Classified</h2>
-                  <p>It is a long established fact that a reader will be distracted by the readable content of a page
-                     when looking at its layout. The point of using Lorem ere, content here', making it</p>
+                  <h2>Team</h2>
                </div>
             </div>
          </div>
@@ -148,30 +107,36 @@
 
 
          <div class="row">
-            <div class="col-xl-4 col-lg-4 col-md-4 margin_bott">
-               <div class="classified_box">
-                  <figure><img src="images/work_img1.jpg" alt="#" /></figure>
-                  <h3> FRONT END MULTICURRENCY </h3>
-                  <p>It is a long established fact that a reader will opposed to using 'Content here, content here',
-                     making it</p>
+            <div class="col-xl-3 col-lg-3 col-md-3 margin_bott">
+               <div class="classified_box team1">
+                  <figure><img src="images/tests.png" alt="#" /></figure>
+                  <h3>Mike Connon Brookes</h3>
+                  <p>Lorem ipsum dolor sit amet</p>
                </div>
             </div>
-            <div class="col-xl-4 col-lg-4 col-md-4 margin_bott">
-               <div class="classified_box">
-                  <figure><img src="images/work_img2.jpg" alt="#" /></figure>
-                  <h3>MOST INTELLIGENT SEARCH SYSTEM</h3>
-                  <p>It is a long established fact that a reader will opposed to using 'Content here, content here',
-                     making it</p>
+            <div class="col-xl-3 col-lg-3 col-md-3 margin_bott">
+               <div class="classified_box team2">
+                  <figure><img src="images/tests.png" alt="#" /></figure>
+                  <h3>Sri Viswanath</h3>
+                  <p>Lorem ipsum dolor sit amet</p>
                </div>
             </div>
-            <div class="col-xl-4 col-lg-4 col-md-4">
-               <div class="classified_box">
-                  <figure><img src="images/work_img3.jpg" alt="#" /></figure>
-                  <h3> FRONT END MULTICURRENCY </h3>
-                  <p>It is a long established fact that a reader will opposed to using 'Content here, content here',
-                     making it</p>
+            <div class="col-xl-3 col-lg-3 col-md-3">
+               <div class="classified_box team3">
+                  <figure><img src="images/tests.png" alt="#" /></figure>
+                  <h3> Anu Bharadwaj </h3>
+                  <p>Lorem ipsum dolor sit amet</p>
                </div>
             </div>
+
+            <div class="col-xl-3 col-lg-3 col-md-3">
+               <div class="classified_box team4">
+                  <figure><img src="images/tests.png" alt="#" /></figure>
+                  <h3> Erika Fisher </h3>
+                  <p>Lorem ipsum dolor sit amet</p>
+               </div>
+            </div>
+
          </div>
 
       </div>
@@ -188,13 +153,14 @@
             <div class="col-md-6">
                <div class="contact_box">
                   <div class="titlepage">
-                     <span>Contact Us</span>
-                     <h2>Let’s talk for ads</h2>
+                     <span>Contact</span>
+                     <h2>Lorem ipsum dolor sit amet</h2>
                   </div>
-                  <p>It is a long established fact that a reader will be distracted by the readable content of a page
-                     when looking at its layout. The point of using Lorem ere, content here', making itIt is a long
-                     established fact that a reader will be distracted by the readable content of a page when looking at
-                     its layout. The point of using Lorem ere, content here', making it</p>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                     culpa qui officia deserunt mollit anim id est laborum.</p>
                </div>
             </div>
             <div class="col-md-6">
@@ -210,7 +176,7 @@
                         <input class="contactus" placeholder="Email" type="type" name="Email">
                      </div>
                      <div class="col-md-12">
-                        <textarea class="textarea" placeholder="Message" type="type" Message="Name">Message </textarea>
+                        <textarea class="textarea" placeholder="Message" type="type" Message="Name"></textarea>
                      </div>
                      <div class="col-sm-12">
                         <button class="send_btn">Send</button>
@@ -231,7 +197,7 @@
             <div class="col-md-12">
                <div class="titlepage">
                   <h2>Testimonial</h2>
-                  <p>when looking at its layout. The point of using Lorem ere, content here', making it</p>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor</p>
                </div>
             </div>
          </div>
@@ -257,10 +223,10 @@
                                  <div class="col-xl-8 col-lg-8 col-md-12">
                                     <div class="test_box">
                                        <i><img src="images/te1.png" alt="#" /></i>
-                                       <p>It is a long established fact that a reader will be distracted by the readable
-                                          content of a page when looking at its layout. The point of using Lorem Ipsum
-                                          is that it has a more-or-less normal distribution of letters, as opposed to
-                                          using 'Content here, content here', making it </p>
+                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                          nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                          Duis aute irure dolor in reprehenderit in voluptate </p>
                                        <i class="flot_right"><img src="images/te2.png" alt="#" /></i>
                                     </div>
                                  </div>
@@ -281,10 +247,10 @@
                                  <div class="col-xl-8 col-lg-8 col-md-12">
                                     <div class="test_box">
                                        <i><img src="images/te1.png" alt="#" /></i>
-                                       <p>It is a long established fact that a reader will be distracted by the readable
-                                          content of a page when looking at its layout. The point of using Lorem Ipsum
-                                          is that it has a more-or-less normal distribution of letters, as opposed to
-                                          using 'Content here, content here', making it </p>
+                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                          nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                          Duis aute irure dolor in reprehenderit in voluptate </p>
                                        <i class="flot_right"><img src="images/te2.png" alt="#" /></i>
                                     </div>
                                  </div>
@@ -305,10 +271,10 @@
                                  <div class="col-xl-8 col-lg-8 col-md-12">
                                     <div class="test_box">
                                        <i><img src="images/te1.png" alt="#" /></i>
-                                       <p>It is a long established fact that a reader will be distracted by the readable
-                                          content of a page when looking at its layout. The point of using Lorem Ipsum
-                                          is that it has a more-or-less normal distribution of letters, as opposed to
-                                          using 'Content here, content here', making it </p>
+                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                          nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                          Duis aute irure dolor in reprehenderit in voluptate </p>
                                        <i class="flot_right"><img src="images/te2.png" alt="#" /></i>
                                     </div>
                                  </div>
@@ -339,11 +305,9 @@
             <div class="row">
                <div class="col-md-8 offset-md-2">
                   <div class="cont">
-                     <h3>Free Multipurpose <br>
-                        Responsive Landing Page 2019
+                     <h3>Enjoy Ecuador <br>
+                        Travel
                      </h3>
-                     <p>Modern lighting fast & easily Customizable</p>
-                     <a class="read_more" href="#">Get A Quote</a>
                   </div>
                </div>
             </div>
@@ -352,7 +316,10 @@
             <div class="container">
                <div class="row">
                   <div class="col-md-12">
-                     <p>© 2019 All Rights Reserved. Design by <a href="https://html.design/"> Free Html Templates</a>
+                     <p>© Enjoy Ecuador Travel | Copyright <script>
+                           document.write(new Date().getFullYear())
+                        </script>. Design by <a href="https://www.savage-mag.com/" target="_blank">Savage
+                           Magazine</a>
                      </p>
                   </div>
                </div>
